refactoring lpboost for experiment use

--- a/conf/omcb.conf
+++ b/conf/omcb.conf
@@ -1,10 +1,10 @@
-Data:
-{
-    trainData = "./data/dna-train.data";
-    trainLabels = "./data/dna-train.labels";
-    testData = "./data/dna-test.data";
-    testLabels = "./data/dna-test.labels";
-};
+//Data:
+//{
+//    trainData = "./data/dna-train.data";
+//    trainLabels = "./data/dna-train.labels";
+//    testData = "./data/dna-test.data";
+//    testLabels = "./data/dna-test.labels";
+//};
 Forest:
 {
     maxDepth = 20;
